Внёс косметические изменения в EventServiceImpl для улучшения читаемости